--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
-  <script src="script.js" defer></script>
-  <title>Velkommen!</title>
+  <title>Bug Dodger</title>
+  <style>
+    canvas {
+      display: block;
+      width: 65%;
+      margin: 0 auto;
+    }
+  </style>
+  
 </head>
-
 <body>
-  <div class="container">
-    <h1>Velkommen!</h1>
-    <button id="clap-button" class="button">👏</button>
-  </div>
-</body>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.min.js"></script>
 
+
+<script defer="" src="game.js"></script>
+
+
+<canvas width="640" height="360"></canvas>
+</body>
 </html>
