--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
   <meta charset="UTF-8">
-  <title>Bug Dodger</title>
+  <title>Ikke dø!</title>
   <style>
     canvas {
       display: block;
