--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+  <head>
   <meta charset="UTF-8">
   <title>Ikke dø!</title>
   <style>
     canvas {
       display: block;
-      width: 65%;
+      width: 90%;
       margin: 0 auto;
     }
   </style>
