--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
   <meta charset="UTF-8">
-  <title>Ikke dø!</title>
-  <style>
-    canvas {
-      display: block;
-      width: 90%;
-      margin: 0 auto;
-    }
-  </style>
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
+  <script src="script.js" defer></script>
+  <title>Velkommen!</title>
 </head>
+
+
+
+
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.min.js"></script>
+  <div class="container">
+    <h1>Velkommen!</h1>
+    <button id="clap-button" class="button" >👏</button>
+    <button class="button"> <a href="./game.html">Dodge </a> </button> 
+    <button class="button"> <a href="./cats.html">Cats </a> </button> 
+    <button class="button"> <a href="./game2.html">Bug killah</a> </button> 
 
-
-<script defer="" src="game.js"></script>
-
-
-<canvas width="640" height="360"></canvas>
+  </div>
 </body>
+
+
+
 </html>
