--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
   <title>Velkommen!</title>
 </head>
 
+
+
+
 <body>
   <div class="container">
     <h1>Velkommen!</h1>
-    <button id="clap-button" class="button">👏</button>
+    <button id="clap-button" class="button" >👏</button>
+    <button class="button"> <a href="./game.html">🐞 </a> </button> 
+    <button class="button"> <a href="./game2.html">☄️</a> </button> 
+    <button class="button"> <a href="https://forms.gle/yFWA982YPfnC7Jok9"> ✔️ Feedback?  </a> </button> 
+
+
   </div>
+ 
 </body>
+
+
 
 </html>
