--- a/cats.html
+++ b/cats.html
@@ -33,7 +33,7 @@
     background-color: silver;
   }
 </style>
-<h1 id="title">Title</h1>
+<h1 id="title">Cats</h1>
 
 <p>Hva vil du ha her?</p>
  <a href="./index.html"> -- Back?</a> 
