--- a/game2.html
+++ b/game2.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <a href="./index.html"> -- Back?</a> 
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.min.js"></script>
 
   <script defer src="game2.js"></script>
