--- a/game2.html
+++ b/game2.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <title>Bug Invaders</title>
-  <style>
+  <style background-color: #bbff00>
     canvas {
       width: 45%;
     }
   </style>
-
 </head>
 
-<body>
+<body style="background-color:#7236ff;">
     <a href="./index.html"> -- Back?</a> 
+    <br>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.min.js"></script>
 
   <script defer src="game2.js"></script>
