--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
   </style>
   
 </head>
-<body>
+<body style="background-color:#7236ff;">
   <a href="./index.html"> -- Back?</a> 
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.min.js"></script>
 
