--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <div class="container">
     <h1>Velkommen!</h1>
     <button id="clap-button" class="button" >👏</button>
-    <button class="button"> <a href="./game.html">🐞 </a> </button> 
     <button class="button"> <a href="./game2.html">☄️</a> </button> 
+    <button class="button"> <a href="./index3.html">🐞</a> </button> 
+    <button class="button"> <a href="./index4.html">🔢</a> </button> 
     <button class="button"> <a href="https://forms.gle/yFWA982YPfnC7Jok9"> ✔️ Feedback?  </a> </button> 
 
-
   </div>
- 
+  
 </body>
 
 
