--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <button class="button"> <a href="./game2.html">☄️</a> </button> 
     <button class="button"> <a href="./index3.html">🐞</a> </button> 
     <button class="button"> <a href="./index4.html">🔢</a> </button> 
+    <button class="button"> <a href="./index5.html">🎮</a> </button> 
     <button class="button"> <a href="https://forms.gle/yFWA982YPfnC7Jok9"> ✔️ Feedback?  </a> </button> 
 
   </div>
