--- a/index5.html
+++ b/index5.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+  <a href="./index.html"> -- Back?</a> 
+  <br>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.js"></script>
   <script defer src="game5.js"></script>
 </body>
