--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 </head>
 
 
-
+<a href="./game2.html"><span id="clap-button">☄️1</span></a>
 
 <body>
   <div class="container">
     <h1>Velkommen!</h1>
     <button id="clap-button" class="button" >👏</button>
     <button class="button"> <a href="./game2.html">☄️</a> </button> 
+    <a href="./game2.html"><span id="clap-button">☄️2</span></a>
     <button class="button"> <a href="./index3.html">🐞</a> </button> 
     <button class="button"> <a href="./index4.html">🔢</a> </button> 
     <button class="button"> <a href="./index5.html">🎮</a> </button> 
     <button class="button"> <a href="https://forms.gle/yFWA982YPfnC7Jok9"> ✔️ Feedback?  </a> </button> 
-
+    <a href="./game2.html"><span id="clap-button">☄️3</span></a>
   </div>
   
 </body>
