button mayhem with class

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>Velkommen!</h1>
     <button id="clap-button" class="button" >👏</button>
     <button class="button"> <a href="./game2.html">☄️</a> </button> 
-    <a href="./game2.html"><span id="clap-button">☄️2</span></a>
+    <a href="./game2.html"><span id="clap-button" class="button">☄️2</span></a>
     <button class="button"> <a href="./index3.html">🐞</a> </button> 
     <button class="button"> <a href="./index4.html">🔢</a> </button> 
     <button class="button"> <a href="./index5.html">🎮</a> </button> 
