--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
     <button id="clap-button" class="button" >👏</button>
     
     <a href="./game2.html"><span id="clap-button" class="button">☄️</span></a>
- 
     <a href="./index3.html"><span class="button">🐞</span></a>
-    <button class="button"> <a href="./index4.html">🔢</a> </button> 
     <a href="./index4.html"><span class="button">🔢</span></a>
-    <button class="button"> <a href="./index5.html">🎮</a> </button> 
     <a href="./index5.html"><span class="button">🎮</span></a>
-    <button class="button"> <a href="https://forms.gle/yFWA982YPfnC7Jok9"> ✔️ Feedback?  </a> </button> 
+    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span id="clap-button" class="button">✔️ Feedback? </span></a>
     
   </div>
+  <br>
   <footer>    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span id="clap-button" class="button">✔️ Feedback? </span></a>
   </footer>
 
