--- a/index.html
+++ b/index.html
@@ -10,26 +10,18 @@
   <title>Velkommen!</title>
 </head>
 
-
-
 <body>
   <div class="container">
     <h1>Velkommen!</h1>
     <button id="clap-button" class="button" >👏</button>
-    
     <a href="./game2.html"><span id="clap-button" class="button">☄️</span></a>
     <a href="./index3.html"><span class="button">🐞</span></a>
     <a href="./index4.html"><span class="button">🔢</span></a>
     <a href="./index5.html"><span class="button">🎮</span></a>
-    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span id="clap-button" class="button">✔️ Feedback? </span></a>
+    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span  class="button">✔️ Feedback? </span></a>
     
   </div>
-  <br>
-  <footer>    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span id="clap-button" class="button">✔️ Feedback? </span></a>
-  </footer>
 
 </body>
-
-
 
 </html>
