--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link href="style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
   <script src="script.js" defer></script>
-  <title>Velkommen!</title>
+  <title>Lalalalalala lala!</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Velkommen!</h1>
+    <h1>Vet ikke!</h1>
     <button id="clap-button" class="button" >👏</button>
     <a href="./game2.html"><span id="clap-button" class="button">☄️</span></a>
     <a href="./index3.html"><span class="button">🐞</span></a>
