--- a/game2.html
+++ b/game2.html
@@ -12,7 +12,7 @@
 </head>
 
 <body style="background-color:#7236ff;">
-    <a href="./index.html"> -- Back?</a> 
+    <a href="./index.html"> -- Tilbake?</a> 
     <br>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.min.js"></script>
 
