--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   <link href="style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
   <script src="script.js" defer></script>
-  <title>Lalalalalala lala!</title>
+  <title>All of the tech!</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Vet ikke!</h1>
+    <h1>Velkommen!</h1>
     <button id="clap-button" class="button" >👏</button>
     <a href="./game2.html"><span id="clap-button" class="button">☄️</span></a>
     <a href="./index3.html"><span class="button">🐞</span></a>
     <a href="./index4.html"><span class="button">🔢</span></a>
     <a href="./index5.html"><span class="button">🎮</span></a>
+    <a href="./index6.html"><span class="button">🏐</span></a>
     <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span  class="button">✔️ Feedback? </span></a>
     
   </div>
