--- a/index6.html
+++ b/index6.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style6.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <div id='floor'></div>
   </div>
   
-  <script  src="main.js"></script>
+  <script  src="main6.js"></script>
 
 </body>
 </html>
