--- a/index.html
+++ b/index.html
@@ -13,16 +13,21 @@
 <body>
   <div class="container">
     <h1>Velkommen!</h1>
-    <button id="clap-button" class="button" >👏</button>
-    <a href="./game2.html"><span id="clap-button" class="button">☄️</span></a>
+    <a href="./game2.html"><span class="button">☄️</span></a>
     <a href="./index3.html"><span class="button">🐞</span></a>
     <a href="./index4.html"><span class="button">🔢</span></a>
     <a href="./index5.html"><span class="button">🎮</span></a>
     <a href="./index6.html"><span class="button">🏐</span></a>
+    
+  </div>
+  
+  <div class="container2">
+    <h1>Annet</h1>
+    <button id="clap-button" class="button" >👏</button>
+    <a href="./game2.html"><span id="clap-button" class="button">☄️</span></a>
     <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span  class="button">✔️ Feedback? </span></a>
     
   </div>
-
 </body>
 
 </html>
