--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   <div class="container2">
     <h1>Annet</h1>
     <button id="clap-button" class="button" >👏</button>
-    <a href="./game2.html"><span id="clap-button" class="button">☄️</span></a>
-    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span  class="button">✔️ Feedback? </span></a>
+    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span id="clap-button" class="button">✔️ Feedback? </span></a>
     
   </div>
 </body>
