--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <a href="./index3.html"><span class="button">🐞</span></a>
     <a href="./index4.html"><span class="button">🔢</span></a>
     <a href="./index5.html"><span class="button">🎮</span></a>
-    <a href="./index6.html"><span class="button">🏐</span></a>
+    <a href="./index6.html"><button id="clap-button" class="button">🏐</span></a>
     
   </div>
   
   <div class="container2">
     <h1>Annet</h1>
     <button id="clap-button" class="button" >👏</button>
-    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span id="clap-button" class="button">✔️ Feedback? </span></a>
+    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><button id="clap-button" class="button">✔️ Feedback? </span></a>
     
   </div>
 </body>
