--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
   <div class="container2">
     <h1>Annet</h1>
     <button id="clap-button" class="button" >👏</button>
-    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span button id="game-button" class="button">✔️ Feedback? </span></a>
+    
+  </div>
+  
+  <div class="footer">
+    <h1>Slutt</h1>
+    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span button id="feedback-button" class="button">✔️ Feedback? </span></a>
     
   </div>
 </body>
