--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
   <div class="footer">
     <h1>Slutt</h1>
-    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span button id="feedback-button" class="button">✔️ Feedback? </span></a>
+    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span button id="feedback-button" class="button">Feedback?</span></a>
     
   </div>
 </body>
