--- a/index.html
+++ b/index.html
@@ -12,19 +12,17 @@
 
 <body>
   <div class="container">
-    <h1>Velkommen!</h1>
+    <h1>Phaser!</h1>
     <a href="./game2.html"><span button id="game-button" class="button">☄️</span></a>
     <a href="./index3.html"><span button id="game-button" class="button">🐞</span></a>
     <a href="./index4.html"><span button id="game-button" class="button">🔢</span></a>
-    <a href="./index5.html"><span button id="game-button" class="button">🎮</span></a>
-    <a href="./index6.html"><span button id="game-button" class="button">🏐</span></a>
-    
+    <a href="./index5.html"><span button id="game-button" class="button">🎮</span></a>    
   </div>
   
   <div class="container2">
-    <h1>Annet</h1>
+    <h1>js</h1>
     <button id="clap-button" class="button" >👏</button>
-    
+    <a href="./index6.html"><span button id="game-button" class="button">🏐</span></a>
   </div>
   
   <div class="footer">
