--- a/index.html
+++ b/index.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
-  <script src="script.js" defer></script>
-  <title>All of the tech!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
+    <title>All of the tech!</title>
 </head>
-
 <body>
-  <div class="container">
+<div class="container">
     <h1>Phaser!</h1>
-    <a href="./game2.html"><span button id="game-button" class="button">☄️</span></a>
-    <a href="./index3.html"><span button id="game-button" class="button">🐞</span></a>
-    <a href="./index4.html"><span button id="game-button" class="button">🔢</span></a>
-    <a href="./index5.html"><span button id="game-button" class="button">🎮</span></a>    
-  </div>
-  
-  <div class="container2">
+    <div class="button-container">
+        <a href="./game2.html"><span class="button">☄</span></a>
+        <a href="./index3.html"><span class="button">🐞</span></a>
+        <a href="./index4.html"><span class="button">🔢</span></a>
+        <a href="./index5.html"><span class="button">🎮</span></a>
+    </div>
+</div>
+<div class="container2">
     <h1>js</h1>
-    <button id="clap-button" class="button" >👏</button>
-    <a href="./index6.html"><span button id="game-button" class="button">🏐</span></a>
-  </div>
-  
-  <div class="footer">
+    <button id="clap-button" class="button-test">👏</button>
+    <a href="./index6.html"><span id="game-button" class="button">🏐</span></a>
+</div>
+<div class="footer">
     <h1>Slutt</h1>
-    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span button id="feedback-button" class="button">Feedback?</span></a>
-    
-  </div>
+    <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span id="feedback-button" class="button">Feedback?</span></a>
+</div>
 </body>
-
 </html>
