--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="container">
     <h1>Phaser!</h1>
     <div class="button-container">
-        <a href="./game2.html"><span class="button">🪲</span></a>
+        <a href="./game2.html"><span class="button">👾</span></a>
         <a href="./index3.html"><span class="button">🐞</span></a>
         <a href="./index4.html"><span class="button">🔢</span></a>
         <a href="./index5.html"><span class="button">🎮</span></a>
