--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <button id="clap-button" class="button-test">👏</button>
     <a href="./index6.html"><span id="game-button" class="button">🏐</span></a>
 </div>
+<div class="container">
+    <h1>div</h1>
+    <div class="button-container">
+        <a href="./index7.html"><span class="button">🔳</span></a>
+    </div>
+</div>
 <div class="footer">
     <h1>Slutt</h1>
     <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span id="feedback-button" class="button">Feedback?</span></a>
