--- a/index7.html
+++ b/index7.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <link rel='stylesheet' href='style7.css'></head>
-  
+  <meta charset="utf-8">
+  <title>Grid Stuff</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
 <body>
-  <div class="grid">
-    <div class="box a">A</div>
-    <div class="box b">B</div>
-    <div class="box c">C</div>
+  <div class="container">
+    <header>
+      <h1>Header</h1>
+    </header>
+    <nav>
+      <h1>Nav</h1>
+    </nav>
+    <section class="left">
+
+      <h2>Left</h2>
+          
+
+    </section>
+    <div class="overlap">
+      <h3>Overlap</h3>
+    </div>
+    <section class="right">
+      <h2>Right</h2>
+    </section>
+    <footer>
+      <h1>Footer</h1>
+    </footer>
   </div>
 </body>
 
