--- a/index7.html
+++ b/index7.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8">
   <title>Grid Stuff</title>
   <link rel="stylesheet" href="style7.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
 </head>
 
+  
 <body>
   <div class="container">
     <header>
