--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="./index3.html"><span class="button">🐞</span></a>
         <a href="./index4.html"><span class="button">🔢</span></a>
         <a href="./index5.html"><span class="button">🎮</span></a>
+        <a href="index6.html"><span class="button">wowowo</span></a>
     </div>
 </div>
 <div class="container2">
