--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         <a href="./index3.html"><span class="button">🐞</span></a>
         <a href="./index4.html"><span class="button">🔢</span></a>
         <a href="./index5.html"><span class="button">🎮</span></a>
-        <a href="index6.html"><span class="button">wowowo</span></a>
     </div>
 </div>
 <div class="container2">
     <h1>js</h1>
     <button id="clap-button" class="button-test">👏</button>
+        <button id="wave-button" class="button-test">🖖</button>
+
     <a href="./index6.html"><span id="game-button" class="button">🏐</span></a>
 </div>
 <div class="container">
