--- a/grid.html
+++ b/grid.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>EddieSpa</title>
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-      <link rel='stylesheet' href='style.css'>
+      <link rel='stylesheet' href='gridstyle.css'>
   </head>
 
   <body>
