--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <h1>div</h1>
     <div class="button-container">
         <a href="./index7.html"><span class="button">🔳</span></a>
+        <a href="./grid.html"><span class="button">🐶</span></a>
     </div>
 </div>
 <div class="footer">
