--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>All of the tech!</title>
 </head>
 <body>
-<div class="container">
+<div class="container" id="boksen">
     <h1>Phaser!</h1>
     <div class="button-container">
         <a href="./game2.html"><span class="button">👾</span></a>
@@ -18,14 +18,14 @@
         <a href="./index5.html"><span class="button">🎮</span></a>
     </div>
 </div>
-<div class="container2">
+<div class="container2" id="boksto">
     <h1>js</h1>
     <button id="clap-button" class="button-test">👏</button>
         <button id="wave-button" class="button-test">🖖</button>
 
     <a href="./index6.html"><span id="game-button" class="button">🏐</span></a>
 </div>
-<div class="container">
+<div class="container" id="bokstre">
     <h1>div</h1>
     <div class="button-container">
         <a href="./index7.html"><span class="button">🔳</span></a>
