--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container" id="boksen">
-    <h1>Phaser!</h1>
+    <h1>phaser!</h1>
     <div class="button-container">
         <a href="./game2.html"><span class="button">👾</span></a>
         <a href="./index3.html"><span class="button">🐞</span></a>
@@ -33,7 +33,7 @@
     </div>
 </div>
 <div class="footer">
-    <h1>Slutt</h1>
+    <h1>slutt</h1>
     <a href="https://forms.gle/yFWA982YPfnC7Jok9"><span id="feedback-button" class="button">Feedback?</span></a>
 </div>
 </body>
